
Miscellaneous
-------------
 * SendText is now implemented in chan_gtalk and chan_jingle. It will simply send
   XMPP text messages to the remote JID.
 * Modules.conf has a new option - "require" - that marks a module as critical for 
   the execution of Asterisk.
   If one of the required modules fail to load, Asterisk will exit with a return
   code set to 2. 

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for subscribing to a voice mailbox on a remote server and
   making the new/old message count available to local devices.
 * Added support for setting the domain in the URI for caller of an
   outbound call by using the SIPFROMDOMAIN channel variable.
 * Added a new configuration option "remotesecret" for authentication to
   remote services. For backwards compatibility, "secret" still has the
   same function as before, but now you can configure both a remote secret and a
   local secret for mutual authentication.
 * Added a new 'faxdetect=yes|no' configuration option to sip.conf.  When this
   option is enabled, a SIP channel will go to the fax extension (if it exists)
   after T38 is negotiated.  This option is disabled by default.
 * If the channel variable  ATTENDED_TRANSFER_COMPLETE_SOUND is set, 
   the sound will be played to the target of an attended transfer
 * Added two new configuration options, "qualifygap" and "qualifypeers", which allow
   finer control over how many peers Asterisk will qualify and the gap between them
   when all peers need to be qualified at the same time.
 * Added a new 'ignoresdpversion' option to sip.conf.  When this is enabled